test/success/unit/_succ_value_basic_4.hs
x :: Char
x = 'a'
main = print "hello"