test/fail/integration/_fail_grammar_imper_part_1.hs
a
main = print "Hello, world"